add test for get last celebrated holidays and control advice